--- a/contacto.css
+++ b/contacto.css
@@ -42,6 +42,16 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+section{
+    width: 100%;
+    height: 900px;
+    float: left;
+}
+footer{
+    width: 100%;
+    height: 250px;
+    float: left;
+}
 /* NAVEGACION */
 .navbar{
     padding: 2rem;
