--- a/inicio.css
+++ b/inicio.css
@@ -42,15 +42,6 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-header{
-    width: 100%;
-    height: 90px;
-    float: left;
-}
-nav{
-    width: 100%;
-    height: 50px;
-}
 section{
     width: 49.8%;
     height: 900px;
@@ -67,7 +58,7 @@ footer{
     height: 250px;
     float: left;
 }
-/* navegacion */
+/* NAVEGACION */
 .navbar{
     padding: 2rem;
 }
@@ -79,7 +70,7 @@ footer{
     float: right;
     background-color: orangered;
 }
-.navbar .navbar-nav .nav-link:hover{
+ .navbar .navbar-nav .nav-link:hover{
     color: orangered !important;
 }
 .navbar-nav .nav-link:hover{
@@ -92,18 +83,18 @@ footer{
 .compra .btn:hover{
     background-color: rgb(223, 66, 9);
 }
-/* desktop */
+/* DESKTOP */
 @media (min-width: 0px) and  (max-width: 991px) { 
     .list1{
         display: none;
     }
-}
-@media (min-width: 0px) and  (max-width: 575px) { 
+ }
+ @media (min-width: 0px) and  (max-width: 575px) { 
     .list1{
         display: grid;
     }
-}
-/* tablet */
+ }
+ /* TABLET */
 .lista-tablet{
     margin-left: 150px;
 }
@@ -175,6 +166,30 @@ footer{
 .dos-tablet:hover{
     background-color: gray;
 }
+/* seccion mobile */
+/* Estilos para la columna de imágenes */
+.img-column {
+    margin: 20px;
+  }
+  
+  /* Estilos para las imágenes */
+  .img-responsive {
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+  }
+  
+  /* Media query para pantalla pequeña (mobile) */
+  @media only screen and (max-width: 768px) {
+    .img-column {
+      margin: 10px;
+    }
+    .img-responsive {
+      width: 50%;
+      height: auto;
+      margin-bottom: 10px;
+    }
+  }
 /* lista */
 ul{
     list-style-type: none; 
